updated backthis project modal

--- a/index.html
+++ b/index.html
@@ -98,9 +98,12 @@
                  <hr style="width: 100%; margin-top: 2rem;"/>
             </div>
              <div class="enter">
-               <p> Enter your page</p>
-               <div class="dollarbtn"> <p>$ <span>25</span></p></div> 
-               <a href="" style="text-decoration: none;"><div class="Continue"><p>Continue</p></div> </a>
+               <div class="dollarbtn"> 
+                   <p>$25</p>
+                </div> 
+                <div>
+                    <a href="" style="text-decoration: none;"><div class="Continue"><p>Continue</p></div> </a>
+                </div>
              </div>
              
             </div>
@@ -136,7 +139,9 @@
             <h2>Thanks for your support!</h2>
             <p>Your pledge brings us one step closer to sharing Mastercraft <span> Bamboo Monitor Riser worldwide. You will get an email once </span> our campaign is completed. </p>
         </div>
-        <div class="gotitButton"><p>Got it!</p></div>
+        <div class="gotitButton">
+            <p class="gotitButtonText">Got it!</p>
+        </div>
     </section>
 
     <section id="aboutSection">
