updated back this project column3

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="Bamboo">
                     <div>
                         <input type="radio"id="" style="margin-right: 12px;">
-                        <span style="font-weight: 700;">BaambooStand</span> <span style="margin-left: 5px; color: var(--moderate-cyan);">Pledge $25 or more</span> 
+                        <span style="font-weight: 700;">BambooStand</span> <span style="margin-left: 5px; color: var(--moderate-cyan);">Pledge $25 or more</span> 
                     </div>
                     
                     <p>101 <span>left</span>  </p>
@@ -128,7 +128,7 @@
                     <div class="pledge">
                         <div class="Bamboo">
                             <div>
-                                <input type="radio"id="" style="margin-right: 12px;"><span style="font-weight: 700; color: var(--moderate-cyan);">Reward Mahogany Special Edition</span>   <span style="margin-left: 5px;">Pledge $200 or more</span> 
+                                <input type="radio"id="" style="margin-right: 12px;"><span style="font-weight: 700;">Reward Mahogany Special Edition</span>   <span style="margin-left: 5px; color: var(--moderate-cyan);">Pledge $200 or more</span> 
                             </div>
                             
                             <p>0 <span>left</span>  </p>
